# DD4HepPractice

./: CMakeLists.txt  common.cmake
DDCMS_Practice/: CMakeLists.txt  placementTest.cpp
DDCMS_Practice/Wafer/: DDHGCalCell.cpp  DDHGCalWafer.cpp  cellsAlgorithm.xml  cms_hgcalWaferAlgo.xml  wafersAlgorithm.xml
DDCMS_Practice/cmake/modules/: FindCLHEP.cmake  FindDD4hep.cmake  FindDDCMS.cmake
DDCMS_Practice/data/: cms_hgcalAlgo.xml  cms_tracker.xml  cms_trackerAlgo.xml  coneAlgo.xml  materials.xml  testDDHGCalCellAlgorithm.xml  tracker.xml  trackerAlgo.xml  tube.xml
DDCMS_Practice/plugins/: DDHGCalCell.cpp  coneAlgo.cpp  trackerAlgo.cpp  trackerTubeAlgo.txt
DDEve/: CMakeLists.txt  IO.cpp
DDEve/cmake/modules/: FindDD4hep.cmake
DDG4/: CMakeLists.txt
DDG4/test/: g4FromXML.cpp
DDTest/: .units.xml.swp  CMakeLists.txt
DDTest/src/: .test_units.cc.swp
MyExample/: CMakeLists.txt  README
MyExample/compact/: IronCylinder.xml  test.xml
MyExample/inc/: README
MyExample/src/: IronCylinder_geo.cpp  README  SimpleTube.cpp
MyExample/test/: README
